--- a/index.html
+++ b/index.html
@@ -26,28 +26,29 @@
       </section>
  -->
     <section id="scrolly">
-      <figure>
-        <p>0</p>
+      <figure class='viz1'>
+        <svg id="chart1" width="960" height="500"></svg>
       </figure>
-
       <article>
-        <div class="step" data-step="1">
+        <div class="step test" data-step="1">
           <p>People claim that California is the domestic capital of wine. With it's Napa Region, blah. vlah , blah,
             it's no surprise.
             The state is home to blar eae rear eareara, and eraerea re arear .
             eraeraer</p>
         </div>
-        <div class="step" data-step="2">
+        <div class="step test" data-step="2">
           <p>People claim that California is the domestic capital of wine. With it's Napa Region, blah. vlah , blah,
             it's no surprise.
             The state is home to blar eae rear eareara, and eraerea re arear .
             eraeraer</p>
+
         </div>
         <div class="step" data-step="3">
           <p>People claim that California is the domestic capital of wine. With it's Napa Region, blah. vlah , blah,
             it's no surprise.
             The state is home to blar eae rear eareara, and eraerea re arear .
             eraeraer</p>
+
         </div>
         <div class="step" data-step="4">
           <p>People claim that California is the domestic capital of wine. With it's Napa Region, blah. vlah , blah,
@@ -57,9 +58,9 @@
         </div>
       </article>
     </section>
-    <section class='head'>
-      <h1 class='head' style='padding-top: 150px;'> Who is the U.S. Wine Capital?</h1>
-      <p class="byline">By <a href="">Jared Wilber (wilberjw)</a></p>
+    <section class='title-dek'>
+      <h1 class='head' style='padding-top: 150px;'> Where is the U.S. Wine Capital?</h1>
+      <p class="byline">By <a href="">Jared Wilber (@wilberjw)</a></p>
     </section>
     <p class="story">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate
       the visual form
@@ -83,10 +84,8 @@
       processors including Pages and Microsoft Word have since adopted Lorem ipsum as well.
     </p>
 
-    <svg width="960" height="500"></svg>
 
     <section id="outro">
-      <p>Contact wilberjw</p>
     </section>
   </main>
 
@@ -95,168 +94,8 @@
   <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
   <script src="./stickyfill.min.js"></script>
   <script src="./scrollama.min.js"></script>
+  <script src="./StateTween.js"> </script>
   <script src="./scrollama-overlay.js"></script>
-
-  <script>
-
-    let svg = d3.select("svg"),
-      path = svg.append("path"),
-      circles = svg.append("g");
-
-    d3.json("us.topo.json", function (err, topo) {
-
-      let states = topojson.feature(topo, topo.objects.states).features.map(function (d) {
-        return d.geometry.coordinates[0];
-      });
-
-      d3.shuffle(states);
-
-      draw();
-
-      function draw() {
-
-        let a = states[0].slice(0),
-          b = states[1].slice(0);
-
-        // Same number of points on each ring
-        if (a.length < b.length) {
-          addPoints(a, b.length - a.length);
-        } else if (b.length < a.length) {
-          addPoints(b, a.length - b.length);
-        }
-
-        // Pick optimal winding
-        a = wind(a, b);
-
-        path.attr("d", join(a));
-
-        // Redraw points
-        circles.datum(a)
-          .call(updateCircles);
-
-        // Morph
-        let t = d3.transition()
-          .duration(800);
-
-        path.transition(t)
-          .on("end", function () {
-            states.push(states.shift());
-            setTimeout(draw, 1500);
-          })
-          .attr("d", join(b));
-
-        circles.selectAll("circle").data(b)
-          .transition(t)
-          .attr("cx", function (d) {
-            return d[0];
-          })
-          .attr("cy", function (d) {
-            return d[1];
-          });
-
-      }
-
-    });
-
-    function updateCircles(sel) {
-
-      let circles = sel.selectAll("circle")
-        .data(function (d) { return d; });
-
-      let merged = circles.enter()
-        .append("circle")
-        .attr("r", 2)
-        .merge(circles);
-
-      merged.classed("added", function (d) {
-        return d.added;
-      })
-        .attr("cx", function (d) {
-          return d[0];
-        })
-        .attr("cy", function (d) {
-          return d[1];
-        });
-
-      circles.exit().remove();
-
-    }
-
-    function addPoints(ring, numPoints) {
-
-      let desiredLength = ring.length + numPoints,
-        step = d3.polygonLength(ring) / numPoints;
-
-      let i = 0,
-        cursor = 0,
-        insertAt = step / 2;
-
-      do {
-
-        let a = ring[i],
-          b = ring[(i + 1) % ring.length];
-
-        let segment = distanceBetween(a, b);
-
-        if (insertAt <= cursor + segment) {
-          ring.splice(i + 1, 0, pointBetween(a, b, (insertAt - cursor) / segment));
-          insertAt += step;
-          continue;
-        }
-
-        cursor += segment;
-        i++;
-
-      } while (ring.length < desiredLength);
-
-    }
-
-    function pointBetween(a, b, pct) {
-
-      let point = [
-        a[0] + (b[0] - a[0]) * pct,
-        a[1] + (b[1] - a[1]) * pct
-      ];
-
-      point.added = true;
-      return point;
-
-    }
-
-    function distanceBetween(a, b) {
-      return Math.sqrt(Math.pow(a[0] - b[0], 2) + Math.pow(a[1] - b[1], 2));
-    }
-
-    function join(d) {
-      return "M" + d.join("L") + "Z";
-    }
-
-    function wind(ring, vs) {
-
-      let len = ring.length,
-        min = Infinity,
-        bestOffset,
-        sum;
-
-      for (let offset = 0, len = ring.length; offset < len; offset++) {
-
-        let sum = d3.sum(vs.map(function (p, i) {
-          let distance = distanceBetween(ring[(offset + i) % len], p);
-          return distance * distance;
-        }));
-
-        if (sum < min) {
-          min = sum;
-          bestOffset = offset;
-        }
-
-      }
-
-      return ring.slice(bestOffset).concat(ring.slice(0, bestOffset));
-
-    }
-
-  </script>
 </body>
 
 </html>
