--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
+  <script src="./textures.js"></script>
   <style>
 
   </style>
@@ -17,14 +18,6 @@
 
 <body>
   <main>
-    <!--      
-      <section id="intro">
-        <h1 class="intro__hed">Sticky Overlay Example</h1>
-        <p class="intro__dek">
-          Start scrolling to see how it works.
-        </p>
-      </section>
- -->
     <section id="scrolly">
       <figure class='viz1'>
         <svg id="chart1" width="960" height="500"></svg>
@@ -59,7 +52,11 @@
       </article>
     </section>
     <section class='title-dek'>
-      <h1 class='head' style='padding-top: 150px;'> Where is the U.S. Wine Capital?</h1>
+      <h1 class='head' style='padding-top: 150px;'>
+        Where is the
+        <span class='red'>U</span><span class='black'>.</span><span class='blue'>S</span><span class='black'>.</span>
+        Wine Capital?
+      </h1>
       <p class="byline">By <a href="">Jared Wilber (@wilberjw)</a></p>
     </section>
     <p class="story">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate
